--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Sub Six Slide Show</title>			
+	<title>Slide Show and Background</title>			
 		<link href="style.css" rel="stylesheet">
 </head>
 <body>
